# sgemm-practice

./: README.md  meson.build  run.sh  sgemm.cu
src/: meson.build  utils.cu  utils.cuh
src/kernel/: kernel_1.cuh  kernel_2.cuh  kernel_3.cuh  kernel_4.cuh  kernel_5.cuh  kernel_6.cuh  kernel_7.cuh
